@@ -97,7 +97,7 @@ _Description: Virtual consoles in use:
 
 Template: console-setup/toggle
 Type: select
-__Choices: Caps Lock, Right Alt, Right Control, Right Shift, Right Logo key, Menu key, Alt+Shift, Control+Shift, Shift+Caps Lock, Control+Alt, Both Shift keys together, Both Control keys together, Both Alt keys together, Left Alt, Left Control, Left Shift, Left Logo key, No toggling
+__Choices: Caps Lock, Right Alt, Right Control, Right Shift, Right Logo key, Menu key, Alt+Shift, Control+Shift, Control+Alt, Left Alt, Left Control, Left Shift, Left Logo key, Left Control+Left Shift, Alt+Caps Lock, Scroll Lock key, No toggling
 Default: Alt+Shift
 _Description: Method for toggling between national and Latin mode:
  You will need a way to toggle the keyboard between the national
@@ -128,7 +128,7 @@ _Description: Method for temporarily toggling between national and Latin input:
 
 Template: console-setup/altgr
 Type: select
-__Choices: No AltGr key, Right Alt, Right Control, Menu key, Right Logo key, Left Logo key, Both Logo keys, Left Alt
+__Choices: No AltGr key, Right Alt, Right Control, Menu key, Right Logo key, Left Logo key, Both Logo keys, Left Alt, Both Alt keys, Keypad Enter key
 Default: Right Alt
 _Description: AltGr key replacement:
  With some keyboard layouts, AltGr is a modifier key used to input
@@ -140,7 +140,7 @@ _Description: AltGr key replacement:
 
 Template: console-setup/compose
 Type: select
-__Choices: No compose key, Right Alt, Right Logo key, Right Control, Menu key, Caps Lock
+__Choices: No compose key, Right Alt, Right Logo key, Left Logo key, Right Control, Menu key, Caps Lock
 Default: No compose key
 _Description: Compose key:
  The Compose key (known also as Multi_key) causes the computer to interpret
